# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dora-openarm-mujoco"
version = "0.2.0"
authors = [{name = "Enactic, Inc."}]
description = "MuJoCo Description Files (MJCF) for OpenArm"
license = {text = "Apache-2.0"}
maintainers = [{name = "Enactic, Inc."}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dora-rs==0.5.0",
    "dora-rs-cli==0.5.0",
    "mujoco>=3.6.0",
    "numpy",
    "pyarrow",
    "scipy",
    "opencv-python",
    "openarm-mujoco",
]

[project.scripts]
dora-openarm-mujoco = "dora_openarm_mujoco:cli_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
openarm-mujoco = { git = "https://github.com/enactic/openarm_mujoco.git", subdirectory = "v2", rev = "cba9759f7245ae3925f91c6600bdccc130cbf4e3" }
